@@ -5,6 +5,7 @@
 package Guerreiro.Egipcio;
 
 import Guerreiro.Guerreiro;
+import helpMe.QuestoesTrabalho;
 import java.util.ArrayList;
 
 /**
@@ -18,21 +19,44 @@ public class AnubitaE extends Egipcio{
     }
     
     @Override
-    public void atacar(Guerreiro defender, ArrayList<ArrayList<Guerreiro>> lista, int posAtk, int posDef){
-        if (((Egipcio)this).isProvocando()) {
-            defender = lista.get(this.getIndiceQueProvocou()).getFirst();
-            this.ativarProvocacao(this.getIndiceQueProvocou(), lista, 15);
-            System.out.println("O " + this.getClass().getSimpleName() + " " + this.getNome() + " atacou " + defender.getNome() + "\n");
-        }else{
-            ArrayList<Guerreiro> filaDefensor = lista.get(posDef);
+    public void atacar(Guerreiro defender, ArrayList<ArrayList<Guerreiro>> lista, int posAtk, int posDef) {
+        if (defender.getEnergia() <= 0) {
+            defender.morrer(defender, lista, posDef);
+        } else {
+            QuestoesTrabalho.morreuMatou(this, defender);
+            if (((Egipcio) this).isProvocando()) {
+                ArrayList<Guerreiro> filaDefensor = lista.get(this.getIndiceQueProvocou());
 
-            defender.setEnergia(defender.getEnergia() - 15);
-            System.out.println("O " + this.getClass().getSimpleName() + " " + this.getNome() + " atacou " + defender.getNome() + "\n");
-            Guerreiro ultimoDefensor = filaDefensor.getLast();
-            ultimoDefensor.setEnergia(ultimoDefensor.getEnergia() - 15);
-            System.out.println("O " + this.getClass().getSimpleName() + " " + this.getNome() + " atacou " + ultimoDefensor.getNome() + "\n");
+                defender = filaDefensor.get(0);
+                defender.setEnergia(defender.getEnergia() - 15);
+                System.out.println("O " + this.getClass().getSimpleName() + " " + this.getNome() + " atacou " + defender.getNome() + "\n");
+                if (defender.getEnergia() <= 0) {
+                    defender.morrer(defender, lista, this.getIndiceQueProvocou());
+                }
+                Guerreiro ultimoDefensor = filaDefensor.get(filaDefensor.size() - 1);
+                ultimoDefensor.setEnergia(ultimoDefensor.getEnergia() - 15);
+                System.out.println("O " + this.getClass().getSimpleName() + " " + this.getNome() + " atacou " + ultimoDefensor.getNome() + "\n");
+                if (ultimoDefensor.getEnergia() <= 0) {
+                    ultimoDefensor.morrer(ultimoDefensor, lista, this.getIndiceQueProvocou());
+                }
+            } else {
+                ArrayList<Guerreiro> filaDefensor = lista.get(posDef);
+
+                defender.setEnergia(defender.getEnergia() - 15);
+                System.out.println("O " + this.getClass().getSimpleName() + " " + this.getNome() + " atacou " + defender.getNome() + "\n");
+                if (defender.getEnergia() <= 0) {
+                    defender.morrer(defender, lista, posDef);
+                }
+                if (filaDefensor.get(filaDefensor.size() - 1) != null) {
+                    Guerreiro ultimoDefensor = filaDefensor.get(filaDefensor.size() - 1);
+                    ultimoDefensor.setEnergia(ultimoDefensor.getEnergia() - 15);
+                    System.out.println("O " + this.getClass().getSimpleName() + " " + this.getNome() + " atacou " + ultimoDefensor.getNome() + "\n");
+                    if (ultimoDefensor.getEnergia() <= 0) {
+                        ultimoDefensor.morrer(ultimoDefensor, lista, posDef);
+                    }
+                }
+            }
         }
-
     }
     
     @Override
